generated/checker-for-evaluation/generated/test-Memory-Leak-51df947678360faf1967fe0bd1a40c681f634104/build_logs/5/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:104:76: error: ‘const class clang::LocationContext’ has no member named ‘getCurrentStackFrame’; did you mean ‘getStackFrame’?
  104 |   const StackFrameContext *SFC = C.getPredecessor()->getLocationContext()->getCurrentStackFrame();
      |                                                                            ^~~~~~~~~~~~~~~~~~~~
      |                                                                            getStackFrame
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:131:24: error: ‘const class clang::ento::ProgramState’ has no member named ‘begin’
  131 |   for (auto I = State->begin<AllocatedNetdevMap>(), E = State->end<AllocatedNetdevMap>(); I != E; ++I) {
      |                        ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:131:48: error: expected primary-expression before ‘>’ token
  131 |   for (auto I = State->begin<AllocatedNetdevMap>(), E = State->end<AllocatedNetdevMap>(); I != E; ++I) {
      |                                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:131:50: error: expected primary-expression before ‘)’ token
  131 |   for (auto I = State->begin<AllocatedNetdevMap>(), E = State->end<AllocatedNetdevMap>(); I != E; ++I) {
      |                                                  ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:131:96: error: ‘E’ was not declared in this scope
  131 |   for (auto I = State->begin<AllocatedNetdevMap>(), E = State->end<AllocatedNetdevMap>(); I != E; ++I) {
      |                                                                                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportLeak(const clang::ento::MemRegion*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:146:11: error: ‘class clang::ento::PathSensitiveBugReport’ has no member named ‘addVisitorFocus’; did you mean ‘addVisitor’?
  146 |   Report->addVisitorFocus(MR);
      |           ^~~~~~~~~~~~~~~
      |           addVisitor
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
